syntax = "proto3";

option java_package = "com.example.soap.stubs";
option java_multiple_files = true;

// Entity messages
message Reservation {
  int64 id = 1;
  Client client = 2;
  Chambre chambre = 3;
  string date_debut = 4;
  string date_fin = 5;
  string preferences = 6;
}

message Client {
  int64 id = 1;
  string nom = 2;
  string prenom = 3;
  string email = 4;
  string telephone= 5;
}

message Chambre {
  int64 id = 1;
  string numero = 2;
  bool disponible = 3;
  double prix = 4;
  string type = 5;
}

// Request messages
message CreateReservationRequest {
    int64 client_id = 1;
    int64 chambre_id = 2;
    string date_debut = 3;
    string date_fin = 4;
    string preferences = 5;
}

message GetReservationRequest {
  int64 id = 1;
}

message UpdateReservationRequest {
  int64 id = 1;
      int64 client_id = 2;
      int64 chambre_id = 3;
      string date_debut = 4;
      string date_fin = 5;
      string preferences = 6;
}

message DeleteReservationRequest {
  int64 id = 1;
}
message DeleteReservationResponse {
  bool success = 1;  // Indique si la suppression a r√©ussi
}

// Response messages
message ReservationResponse {
  Reservation reservation = 1;
}

message ReservationList {
  repeated Reservation reservations = 1;
}
message GetAllReservationsRequest {}
// Service definition
service ReservationService {
  rpc CreateReservation(CreateReservationRequest) returns (ReservationResponse);
  rpc GetReservation(GetReservationRequest) returns (ReservationResponse);
  rpc GetAllReservations(GetAllReservationsRequest) returns (ReservationList);
  rpc UpdateReservation(UpdateReservationRequest) returns (ReservationResponse);
  rpc DeleteReservation(DeleteReservationRequest) returns (DeleteReservationResponse);
}